--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "0.19.0",
     "core-js": "^2.6.12",
+    "echarts": "^5.3.0",
     "element-ui": "2.11.0",
     "font-awesome": "4.7.0",
     "vue": "^2.6.14",
